--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>To do list</title>
 </head>
 
 <body>
@@ -15,9 +15,14 @@
             <h2>Organizador de tareas</h2>
             <input type="text" id="myInput" placeholder="Nueva tarea">
             <span onclick="addTask()" class="addBtn">Agregar</span>
-          </div>
-          <ul id="taskList">
-          </ul>
+        </div>
+        <div class="buttons-clasifiers">
+          <button>Archivadas</button>
+          <button>Terminadas</button>
+          <button>Abiertas</button>
+        </div> 
+        <ul id="taskList">
+        </ul>
     </div>
     <script type="text/javascript" src="index.js"></script>
     </body>
