corregido cierre etiqueta input

--- a/sesion1/index.html
+++ b/sesion1/index.html
@@ -9,7 +9,7 @@
     <div>
         <div>
             <h2>Organizador de tareas</h2>
-            <input type="text" placeholder="Nueva tarea">
+            <input type="text" placeholder="Nueva tarea" />
             <button>Agregar</button>
         </div>
         <ul>
