--- a/sesion2/index.html
+++ b/sesion2/index.html
@@ -10,7 +10,7 @@
     <div class="main">
         <div class="header">
             <h2>Organizador de tareas</h2>
-            <input type="text" placeholder="Nueva tarea">
+            <input type="text" placeholder="Nueva tarea" />
             <button>Agregar</button>
         </div>
         <ul>
