--- a/sesion3/index.html
+++ b/sesion3/index.html
@@ -12,7 +12,7 @@
     <div class="main">
         <div class="header">
             <h2>Organizador de tareas</h2>
-            <input id="task_name" type="text" placeholder="Nueva tarea">
+            <input id="task_name" type="text" placeholder="Nueva tarea" />
             <button onclick="confirmAdd();">Agregar</button>
         </div>
         <ul>
