--- a/sesion5/index.html
+++ b/sesion5/index.html
@@ -11,7 +11,7 @@
     <div class="main">
         <div class="header">
             <h2>Organizador de tareas</h2>
-            <input id="task_name" type="text" placeholder="Nueva tarea">
+            <input id="task_name" type="text" placeholder="Nueva tarea" />
             <button onclick="addTask(document.getElementById('task_name').value);">Agregar</button>
         </div>
         <ul id="task_list">
