reuse stylesheet in sessions[2-5]

--- a/sesion2/index.html
+++ b/sesion2/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Lista de tareas TeachT3ch</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../assets/styles-core.css">
 </head>
 
 <body>
