--- a/sesion3/index.html
+++ b/sesion3/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Lista de tareas TeachT3ch</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../assets/styles-core.css">
     <script type="text/javascript" src="index.js"></script>
 </head>
 
