--- a/sesion2/index.html
+++ b/sesion2/index.html
@@ -2,22 +2,32 @@
 <html>
 
 <head>
+    <meta charset="UTF-8">
     <title>Lista de tareas TeachT3ch</title>
     <link rel="stylesheet" href="../assets/styles-core.css">
 </head>
 
 <body>
-    <div class="main">
+    <header class="dark-background-color">
+        <h1>
+            Organizador de Tareas Teach Teach
+        </h1>
+    </header>
+    <main class="main dark-background-color">
         <div class="header">
-            <h2>Organizador de tareas</h2>
+            <h2>Mi lista de tareas</h2>
             <input type="text" placeholder="Nueva tarea" />
             <button>Agregar</button>
         </div>
         <ul>
             <li>Comprar comida<span class="close">&#x00D7;</span></li>
-            <li>Leer un libro<span class="close">&#x00D7;</span></li>
+            <li>Leer un libro de fútbol<span class="close">&#x00D7;</span></li>
         </ul>
-    </div>
+    </main>
+    <footer class="dark-background-color">
+        <a>Contacta</a>
+        <a>Sobre nosotros</a>
+    </footer>
 </body>
 
 </html>
