Comentario sobre el juego de caracteres

--- a/sesion3/index.html
+++ b/sesion3/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> <!-- Necesario para mostrar correctamente el signo de abrir interrogación -->
     <title>Lista de tareas TeachT3ch</title>
     <link rel="stylesheet" href="../assets/styles-core.css">
     <script type="text/javascript" src="index.js"></script>
