--- a/sesion2/index.html
+++ b/sesion2/index.html
@@ -1,33 +1,35 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Lista de tareas TeachT3ch</title>
-    <link rel="stylesheet" href="../assets/styles-core.css">
-</head>
+    <link rel="stylesheet" href="../assets/styles-core.css" />
+  </head>
 
-<body>
+  <body>
     <header class="dark-background-color">
-        <h1>
-            Organizador de Tareas Teach Teach
-        </h1>
+      <h1>Organizador de Tareas Teach Teach</h1>
     </header>
-    <main class="main dark-background-color">
-        <div class="header">
-            <h2>Mi lista de tareas</h2>
-            <input type="text" placeholder="Nueva tarea" />
-            <button>Agregar</button>
-        </div>
-        <ul>
-            <li>Comprar comida<span class="close">&#x00D7;</span></li>
-            <li>Leer un libro de fútbol<span class="close">&#x00D7;</span></li>
-        </ul>
+    <main class="dark-background-color">
+      <div class="header">
+        <h2>Mi lista de tareas</h2>
+        <input type="text" placeholder="Nueva tarea" />
+        <button>Agregar</button>
+      </div>
+      <ul>
+        <li>
+          <div class="content">Comprar comida</div>
+          <div class="close">&#x00D7;</div>
+        </li>
+        <li>
+          <div class="content">Leer un libro de fútbol</div>
+          <div class="close">&#x00D7;</div>
+        </li>
+      </ul>
     </main>
     <footer class="dark-background-color">
-        <a>Contacta</a>
-        <a>Sobre nosotros</a>
+      <a>Contacta</a>
+      <a>Sobre nosotros</a>
     </footer>
-</body>
-
+  </body>
 </html>
