--- a/sesion2/index.html
+++ b/sesion2/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Lista de tareas TeachT3ch</title>
     <link rel="stylesheet" href="../assets/styles-core.css" />
   </head>
