Cambios para facilitar las explicaciones de la sesión 2. También algunas simplificaciones y la corrección de alguna errata.

--- a/sesion2/index.html
+++ b/sesion2/index.html
@@ -2,28 +2,34 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <!--meta name="viewport" content="width=device-width, initial-scale=1"-->
     <title>Lista de tareas TeachT3ch</title>
-    <link rel="stylesheet" href="../assets/styles-core.css" />
+    <!--link rel="stylesheet" href="../assets/styles-core.css" /-->
+    <!--link rel="stylesheet" href="position.css" /-->
+    <!--link rel="stylesheet" href="visual.css" /-->
+    <!--link rel="stylesheet" href="movement.css" /-->
+    <!--link rel="stylesheet" href="flex.css" /-->
+    <!--link rel="stylesheet" href="responsive.css" /-->
   </head>
 
   <body>
     <header class="dark-background-color">
-      <h1>Organizador de Tareas Teach Teach</h1>
+      <h1>Organizador de Tareas Teach T3ch</h1>
     </header>
-    <main class="dark-background-color">
-      <div class="header">
+    <main>
+      <div class="header dark-background-color">
         <h2>Mi lista de tareas</h2>
         <input type="text" placeholder="Nueva tarea" />
         <button>Agregar</button>
       </div>
       <ul>
         <li>
-          <div class="content">Comprar comida</div>
-          <div class="close">&#x00D7;</div>
+          <span class="content">Comprar comida</span>
+          <span class="close">&#x00D7;</span>
         </li>
         <li>
-          <div class="content">Leer un libro de fútbol</div>
-          <div class="close">&#x00D7;</div>
+          <span class="content">Leer un libro de fútbol</span>
+          <span class="close">&#x00D7;</span>
         </li>
       </ul>
     </main>
