--- a/sesion2/index.html
+++ b/sesion2/index.html
@@ -4,12 +4,12 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <!--meta name="viewport" content="width=device-width, initial-scale=1"-->
     <title>Lista de tareas TeachT3ch</title>
-    <!--link rel="stylesheet" href="../assets/styles-core.css" /-->
-    <!--link rel="stylesheet" href="position.css" /-->
-    <!--link rel="stylesheet" href="visual.css" /-->
-    <!--link rel="stylesheet" href="movement.css" /-->
-    <!--link rel="stylesheet" href="flex.css" /-->
-    <!--link rel="stylesheet" href="responsive.css" /-->
+    <!-- <link rel="stylesheet" href="../assets/styles-core.css" /> -->
+    <!-- <link rel="stylesheet" href="position.css" /> -->
+    <!-- <link rel="stylesheet" href="visual.css" /> -->
+    <!-- <link rel="stylesheet" href="movement.css" /> -->
+    <!-- <link rel="stylesheet" href="flex.css" /> -->
+    <!-- <link rel="stylesheet" href="responsive.css" /> -->
   </head>
 
   <body>
@@ -17,7 +17,7 @@
       <h1>Organizador de Tareas Teach T3ch</h1>
     </header>
     <main>
-      <div class="header dark-background-color">
+      <div class="subtitulo dark-background-color">
         <h2>Mi lista de tareas</h2>
         <input type="text" placeholder="Nueva tarea" />
         <button>Agregar</button>
